2012-11-25  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/be13_api/feature_recorder.cpp (feature_recorder::carve): fixed bad mode on mkdir

2012-11-22  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_aes.cpp (rotate): changed implementation to avoid casting error.

	* src/be13_api/bulk_extractor_i.h (class scanner_def): const scanner_t *changed to scanner_t for compliance with clang.

	* src/be13_api/sbuf.h (class sbuf_t): changed cast for clang

2012-11-21  Simson Garfinkel  <simsong@ubuntu>

	* src/utils.h: moved ishexnumber from bulk_extractor.h to utils.h

2012-11-14  Simson Garfinkel  <simsong@npsair.local>

	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.

	* src/bulk_extractor.h: removed lowerstr() as it wasn't being used.

	* src/word_and_context_list.h: replaced multimap with tr1/unordered_map

2012-11-06  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/scan_email.flex (Host): maximum URL size increased to 384 bytes

2012-11-05  Simson Garfinkel  <simsong@npsair.local>

	* src/be13_api/feature_recorder_set.h (class feature_recorder_set): changed constructor so that ALERT_RECORDER is now created in bulk_extractor.cpp and not in the constructor. This improves code reuse in other programs

	* src/feature_recorder_set.cpp (feature_recorder_set::get_alert_recorder): changed ALERT_RECORDER to ALERT_RECORDER_NAME. 

2012-10-27  Simson Garfinkel  <simsong@npsair.local>

	* src/sbuf_private.h (sbuf_t::get16i): fixed get16i return error.

2012-10-29  Simson Garfinkel  <simsong@air2.local>

	* src/Makefile.am: updated for be13_api directory

2012-10-22  Simson Garfinkel  <simsong@air2.local>

	* src/sbuf_private.h (sbuf_t::get16u): fixed typo in get16u().

2012-10-14  user  <user@localhost.localdomain>

	* src_win/Makefile.am (EXTRA_DIST): folded CONFIGURE_LIBRARIES into CONFIGURE_FC17.sh. Modified script so that tre gets built static under windows.

2012-10-09  Simson Garfinkel  <simsong@air2.local>
